// Generated from src/db/schema.ts and datamodel/notes.ts by datamodel/generate-dbml.ts.
// Do not edit: run `bun run datamodel:generate`.

Project Snowtime {
  database_type: 'SQLite'
  Note: '''
    Data model for Snowtime on Turso (libSQL/SQLite).

    Tables in the auth and tenancy groups belong to Better Auth and its organization
    plugin; their shape follows the plugin. Everything else is owned by the app.
  '''
}

// --- Auth (Better Auth core and passkey plugin) ----------------------------------------

Table user [note: 'Better Auth user. One row per human, shared across organizations.'] {
  id text [pk, note: 'UUIDv7.']
  name text [not null, note: 'Display name.']
  email text [not null, unique, note: 'Sign-in email, stored lowercased.']
  email_verified integer [not null, default: 0, note: 'Boolean.']
  image text [note: 'Avatar URL.']
  created_at integer [not null, note: 'Epoch ms, UTC.']
  updated_at integer [not null, note: 'Epoch ms, UTC.']
}

Table session [note: 'Better Auth session. Carries the active organization and team, which every server function reads to scope its queries.'] {
  id text [pk]
  user_id text [not null, ref: > user.id, note: 'ON DELETE CASCADE.']
  token text [not null, unique, note: 'Session token held in the cookie.']
  expires_at integer [not null, note: 'Epoch ms, UTC.']
  ip_address text
  user_agent text
  active_organization_id text [ref: > organization.id, note: 'Organization plugin. The tenant every query in this session is scoped to. ON DELETE SET NULL.']
  active_team_id text [ref: > team.id, note: 'Organization plugin with teams. Optional filter, not an access boundary. ON DELETE SET NULL.']
  created_at integer [not null]
  updated_at integer [not null]

  indexes {
    user_id
  }
}

Table account [note: 'Better Auth credential or linked provider. Email/password sign-in stores the password hash here.'] {
  id text [pk]
  user_id text [not null, ref: > user.id, note: 'ON DELETE CASCADE.']
  account_id text [not null, note: 'Identifier at the provider; equals user_id for the credential provider.']
  provider_id text [not null, note: 'credential, or an OAuth provider id.']
  access_token text
  refresh_token text
  id_token text
  access_token_expires_at integer
  refresh_token_expires_at integer
  scope text
  password text [note: 'Password hash, credential provider only.']
  created_at integer [not null]
  updated_at integer [not null]

  indexes {
    user_id
    (provider_id, account_id)
  }
}

Table passkey [note: 'Passkey plugin (@better-auth/passkey). A WebAuthn credential a signed-in user registered; sign-in looks it up by credential_id.'] {
  id text [pk]
  name text [note: 'Label the user gave it.']
  public_key text [not null, note: 'COSE public key, base64.']
  user_id text [not null, ref: > user.id, note: 'ON DELETE CASCADE.']
  credential_id text [not null, unique, note: 'WebAuthn credential id, base64url.']
  counter integer [not null, note: 'Signature counter, checked against replayed assertions.']
  device_type text [not null, note: 'singleDevice or multiDevice.']
  backed_up integer [not null, note: 'Boolean. Synced by the platform, e.g. iCloud Keychain.']
  transports text [note: 'Comma-separated, e.g. internal,hybrid.']
  created_at integer [note: 'Epoch ms, UTC.']
  aaguid text [note: 'Authenticator model id.']

  indexes {
    user_id
  }
}

Table verification [note: 'Better Auth one-time values: email verification, password reset.'] {
  id text [pk]
  identifier text [not null, note: 'What the value verifies, e.g. an email address.']
  value text [not null]
  expires_at integer [not null]
  created_at integer [not null]
  updated_at integer [not null]

  indexes {
    identifier
  }
}

// --- Tenancy (Better Auth organization plugin, teams enabled) --------------------------

Table organization [note: 'Tenant. Every app-owned table carries organization_id and every query filters by it.'] {
  id text [pk]
  name text [not null]
  slug text [not null, unique, note: 'URL-safe handle.']
  logo text
  metadata text [note: 'Plugin-defined JSON. Not used by the app.']
  created_at integer [not null]
}

Table member [note: 'A user in an organization. A user can be a member of several organizations.'] {
  id text [pk]
  organization_id text [not null, ref: > organization.id, note: 'ON DELETE CASCADE.']
  user_id text [not null, ref: > user.id, note: 'ON DELETE CASCADE.']
  role text [not null, default: 'member', note: 'owner, admin, member (plugin defaults). No CHECK: the plugin can store several roles comma-separated.']
  created_at integer [not null]

  indexes {
    (organization_id, user_id) [unique]
    user_id
  }
}

Table team [note: 'A group of members within an organization. Groups people for access and reporting; it owns no data.'] {
  id text [pk]
  organization_id text [not null, ref: > organization.id, note: 'ON DELETE CASCADE.']
  name text [not null]
  member_count integer [not null, default: 0, note: 'Maintained by Better Auth when members join or leave.']
  created_at integer [not null]
  updated_at integer

  indexes {
    (organization_id, name) [unique]
    (id, organization_id) [unique, note: 'Target of composite foreign keys, so rows pointing at a team cannot name another organization.']
  }
}

Table team_member [note: 'A user in a team. A member can be in several teams of the same organization.'] {
  id text [pk]
  team_id text [not null, ref: > team.id, note: 'ON DELETE CASCADE.']
  user_id text [not null, ref: > user.id, note: 'ON DELETE CASCADE.']
  role text [not null, default: 'member', note: 'App-managed. CHECK: lead, member. A lead reads and reports on the time of the team. Better Auth 1.7 has no additional fields on team members, so it never reads or writes this column; new rows get the default.']
  membership_key text [unique, note: 'Better Auth dedupe key, SHA-256 of team_id and user_id.']
  created_at integer

  indexes {
    (team_id, user_id) [unique]
    user_id
  }
}

Table invitation [note: 'Pending invitation to an organization, optionally into a team.'] {
  id text [pk]
  organization_id text [not null, ref: > organization.id, note: 'ON DELETE CASCADE.']
  email text [not null, note: 'Invitee address, lowercased.']
  role text [note: 'Organization role granted on acceptance.']
  team_id text [ref: > team.id, note: 'Team joined on acceptance, if any. ON DELETE SET NULL.']
  status text [not null, default: 'pending', note: 'pending, accepted, rejected, canceled.']
  expires_at integer [not null]
  inviter_id text [not null, ref: > user.id, note: 'ON DELETE CASCADE.']
  created_at integer [not null]

  indexes {
    (organization_id, email)
  }
}

// --- App -------------------------------------------------------------------------------
// Audit columns (see datamodel/README.md): created_*/updated_* on mutable tables,
// created_* only on insert-and-delete link tables, sys_deleted on entities users delete.

Table user_settings [note: 'Per-user settings, one row per user, shared across organizations and devices. Created on first sign-in with the time zone and language of the browser. Lives as long as the user, so no sys_deleted.'] {
  user_id text [pk, ref: > user.id]
  time_zone text [not null, note: 'IANA zone, e.g. Europe/Tallinn. Drives display and report day/week boundaries.']
  week_start text [not null, default: 'mon', note: 'CHECK: mon, sun.']
  created_at integer [not null, default: `CAST(ROUND(unixepoch('subsec') * 1000) AS INTEGER)`, note: 'Audit. Epoch ms, set by the database.']
  created_by text [not null, ref: > user.id, note: 'Audit. Acting user, set by the app per request.']
  updated_at integer [not null, default: `CAST(ROUND(unixepoch('subsec') * 1000) AS INTEGER)`, note: 'Audit. Set by the app on update; trigger fallback.']
  updated_by text [not null, ref: > user.id, note: 'Audit. Acting user of the last change, set by the app.']
  locale text [not null, default: 'en', note: 'UI language: en, et. Set from the browser on first sign-in; validated in the app, no CHECK.']
  theme text [not null, default: 'system', note: 'system, light, dark. The server renders the theme class from it. Validated in the app, no CHECK.']
  timer_layout text [not null, default: 'bar', note: 'bar, focus, table. Validated in the app, no CHECK.']
  show_summary integer [not null, default: 1, note: 'Boolean 0/1 (CHECK). Whether the timer page shows the summary.']
  compact_rows integer [not null, default: 0, note: 'Boolean 0/1 (CHECK), default 0. Whether the timer shows entry rows compact.']
  app_icon text [not null, default: '02', note: 'Brand concept 01 to 12 (src/lib/app-icon.ts), default 02. Header mark and favicon. Validated in the app, no CHECK.']
  scene_season text [not null, default: 'auto', note: 'auto (by month), winter, spring, summer, autumn. The scene, weather, and tagline. Validated in the app, no CHECK.']
  scene_background integer [not null, default: 1, note: 'Boolean 0/1 (CHECK). Whether the season image shows behind the pages.']
  scene_strength text [not null, default: 'dimmed', note: 'dimmed, full: how much page color covers the image. Validated in the app, no CHECK.']
  surfaces text [not null, default: 'glass', note: 'glass, solid: whether cards let the image show through. Validated in the app, no CHECK.']
  scene_weather integer [not null, default: 1, note: 'Boolean 0/1 (CHECK). Whether the season weather effect runs.']
  scene_intro integer [not null, default: 1, note: 'Boolean 0/1 (CHECK). Whether the intro plays on first visit and once a season.']
  duration_format text [not null, default: 'clock', note: 'clock (11:10), units (11h 10m). How durations show; exports keep their own. Validated in the app, no CHECK.']
  date_format text [not null, default: 'dmy', note: 'dmy (30.09.2026), mdy (09/30/2026), default dmy. Numeric dates. Validated in the app, no CHECK.']
  time_format text [not null, default: '24h', note: '24h, 12h, default 24h. Clock times and the time picker. Validated in the app, no CHECK.']
}

Table project [note: 'Owned by the organization. Visible to the whole organization unless assigned to teams.'] {
  id text [pk, note: 'UUIDv7, generated on the client.']
  organization_id text [not null, ref: > organization.id]
  name text [not null]
  color text [note: 'Hex color for the UI, e.g. #4E79A7.']
  archived_at integer [note: 'Epoch ms. Domain lifecycle, not deletion: archived projects take no new entries but stay in history and reports.']
  created_at integer [not null, default: `CAST(ROUND(unixepoch('subsec') * 1000) AS INTEGER)`, note: 'Audit. Epoch ms, set by the database.']
  created_by text [not null, ref: > user.id, note: 'Audit. Acting user, set by the app per request.']
  updated_at integer [not null, default: `CAST(ROUND(unixepoch('subsec') * 1000) AS INTEGER)`, note: 'Audit. Set by the app on update; trigger fallback.']
  updated_by text [not null, ref: > user.id, note: 'Audit. Acting user of the last change, set by the app.']
  sys_deleted integer [not null, default: 0, note: 'Audit. Logical delete, CHECK 0 or 1. Deleted rows are excluded everywhere, reports included.']

  indexes {
    (organization_id, name) [unique, note: 'Partial: WHERE sys_deleted = 0. A deleted project frees its name.']
    (id, organization_id) [unique, note: 'Target of composite foreign keys, so rows pointing at a project cannot name another organization.']
  }
}

Table project_team [note: 'Assigns a project to a team. A project with no rows here is available to everyone in the organization. Rows are inserted and deleted, never updated, so only created_* audit columns.'] {
  project_id text [not null, ref: > project.id, note: 'Composite FK (project_id, organization_id) to project (id, organization_id).']
  team_id text [not null, ref: > team.id, note: 'Deleting a team (Better Auth deletes rows) drops its assignments. Composite FK (team_id, organization_id) to team (id, organization_id). ON DELETE CASCADE.']
  organization_id text [not null, ref: > organization.id, note: 'Tenant key. The composite foreign keys to project and team make it equal the organization of both.']
  created_at integer [not null, default: `CAST(ROUND(unixepoch('subsec') * 1000) AS INTEGER)`, note: 'Audit. Epoch ms, set by the database.']
  created_by text [not null, ref: > user.id, note: 'Audit. Acting user, set by the app per request.']

  indexes {
    (project_id, team_id) [pk]
    (organization_id, team_id)
  }
}

Table time_entry [note: 'A span of tracked time. A row with stopped_at null is the running timer; elapsed time is computed on the client and never written periodically.'] {
  id text [pk, note: 'UUIDv7, generated on the client so optimistic updates keep a stable key.']
  organization_id text [not null, ref: > organization.id]
  user_id text [not null, ref: > user.id, note: 'Whose time this is. May differ from created_by when an admin adds an entry for someone.']
  project_id text [ref: > project.id, note: 'Optional. Keeps the entry in the organization of its project. Composite FK (project_id, organization_id) to project (id, organization_id).']
  description text [not null, default: '', note: 'What was worked on.']
  started_at integer [not null, note: 'Epoch ms, UTC.']
  stopped_at integer [note: 'Epoch ms, UTC. CHECK stopped_at > started_at. Null while running.']
  created_at integer [not null, default: `CAST(ROUND(unixepoch('subsec') * 1000) AS INTEGER)`, note: 'Audit. Epoch ms, set by the database.']
  created_by text [not null, ref: > user.id, note: 'Audit. Acting user, set by the app per request.']
  updated_at integer [not null, default: `CAST(ROUND(unixepoch('subsec') * 1000) AS INTEGER)`, note: 'Audit. Set by the app on update; trigger fallback.']
  updated_by text [not null, ref: > user.id, note: 'Audit. Acting user of the last change, set by the app.']
  sys_deleted integer [not null, default: 0, note: 'Audit. Logical delete, CHECK 0 or 1. Deleted rows are excluded everywhere, reports included.']

  indexes {
    user_id [unique, note: 'Partial: WHERE stopped_at IS NULL AND sys_deleted = 0. At most one running timer per user across all organizations.']
    (organization_id, user_id, started_at) [note: 'Own entry list and per-member reports.']
    (organization_id, started_at) [note: 'Organization-wide reports by time range.']
    project_id
  }
}

TableGroup auth [color: #BAB0AC] {
  user
  session
  account
  passkey
  verification
}

TableGroup tenancy [color: #4E79A7] {
  organization
  member
  team
  team_member
  invitation
}

TableGroup tracking [color: #59A14F] {
  user_settings
  project
  project_team
  time_entry
}
